--- a/js/package.json
+++ b/js/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "autoprefixer": "^9.5.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "express-autoprefixer": "^5.4.0",
     "express-compile-sass": "^4.0.0",
     "express-compiless": "^4.1.0",
     "express-less": "^0.1.0",
+    "express-session": "^1.16.1",
+    "express-static-compiler": "^1.0.9",
     "htmlspecialchars": "^1.0.5",
+    "less": "^3.9.0",
+    "node-json-db": "^0.11.0",
     "node-sass": "^4.12.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.3",
+    "router": "^1.3.3",
     "serve-static": "^1.13.2"
   },
   "devDependencies": {},
